Fixed nav z-index, Banner design WIP

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,49 +1,53 @@
 .banner {
     color: white;
     object-fit: contain;
-    height: 448px;
+    width: 100%;
+    height: 750px;
+    position: relative;
+    display: flex;
 }
 
 .banner__contents {
+    display: flex;
+    flex-direction: column;
     margin-left: 30px;
-    padding-top: 140px;
-    height: 190px;
-    /* background-image: linear-gradient(
-        270deg,
-        transparent,
-        rgba(37,37,37,0.0),
-        #111
-    ) */
+    margin-bottom: 100px;
+    justify-content: flex-end;
+    width: 35%;
+    z-index: 1;
+
 }
 
 .banner__title {
-    font-size: 3rem;
+    font-size: 3.2rem;
     font-weight: 800;
-    padding-bottom: 0.3rem;
 }
 
 .banner__description {
-    width: 45rem;
     line-height: 1.3;
-    padding-top: 1rem;
-    font-size: 0.8rem;
-    max-width: 360px;
-    height: 80px;
+    font-size: 1.1rem;
+    color: rgba(255, 255, 255, 0.9);
+
+    padding: 1.5rem 0;
+    /* max-width: 360px; */
 }
 
 .banner__button {
+    /* display: flex; */
     cursor: pointer;
     color: #fff;
     outline: none;
-    border: none;
     font-weight: 700;
     border-radius: 4px;
+    border: 1px solid #fff;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     padding-left: 2rem;
     padding-right: 2rem;
     margin-right: 1rem;
-    padding-top: 0.5rem;
-    background-color: rgba(51,51,51,0.5);
-    padding-bottom: 0.5rem;
+    background-color: transparent;
+    align-items: center;
+    justify-content: center;
 }
 
 .banner__button:hover {
@@ -52,7 +56,25 @@
     transition: all 0.2s;
 }
 
+.banner--fadeLeft {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background-image: linear-gradient(
+        to left,
+        transparent,
+        rgba(17,17,17,0.6),
+        #111
+    )
+}
+
 .banner--fadeBottom {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     height: 7.4rem;
     background-image: linear-gradient(
         180deg,
